--- a/_includes/header.html
+++ b/_includes/header.html
@@ -37,6 +37,9 @@
                     <a id="favoriteLink" class="nav-link" href="{{site.baseurl}}/favorites">Favorites</a>
                 </li>    
                 <li class="nav-item">
+                    <a id="favoriteLink" class="nav-link" href="{{site.baseurl}}/salarychek">Salary Identifier</a>
+                </li>    
+                <li class="nav-item">
                     <!-- Check if JWT token exists and show the appropriate link -->
                     <a id="editUserLink" class="nav-link" href="{{site.baseurl}}/edituser">Edit User</a>
                 </li>
