--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,6 +30,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{site.baseurl}}/aibot">AI Real Estate Bot</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{site.baseurl}}/SalaryHomeMatcher">Salary Home Matcher</a>
+                </li>
                 <!--<li class="maps-item">
                     <a class="nav-link" href="{{site.baseurl}}/maps">Maps</a>
                 </li>!-->
