--- a/_includes/header.html
+++ b/_includes/header.html
@@ -53,6 +53,10 @@
                 </li>
                 <li class="nav-item">
                     <!-- Check if JWT token exists and show the appropriate link -->
+                    <a id="profileLink" class="nav-link" href="{{site.baseurl}}/about">About</a>
+                </li>
+                <li class="nav-item">
+                    <!-- Check if JWT token exists and show the appropriate link -->
                     <a id="logoutLink" class="nav-link" href="#">Logout</a>
                 </li>
             </ul>
