jobly moved to shared repo

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,12 +33,29 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{site.baseurl}}/SalaryHomeMatcher">Salary Home Matcher</a>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Jobly
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="{{site.baseurl}}/postjob">Post a Job</a></li>
+                        <li><a class="dropdown-item" href="{{site.baseurl}}/jobs">Jobs</a></li>
+                        <!-- <li><a class="dropdown-item" href="{{site.baseurl}}/employmentpredictor">Employment Predictor</a></li> -->
+                        <li><a class="dropdown-item" href="{{site.baseurl}}/profile">Profile</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{site.baseurl}}/salarypredictor">Salary Predictor</a>
+                </li>
                 <!--<li class="maps-item">
                     <a class="nav-link" href="{{site.baseurl}}/maps">Maps</a>
                 </li>!-->
                 <li class="nav-item">
                     <a id="favoriteLink" class="nav-link" href="{{site.baseurl}}/favorites">Favorites</a>
-                </li>    
+                </li>  
+                <li class="nav-item">
+                    <a id="favoriteLink" class="nav-link" href="{{site.baseurl}}/favorites">Favorites</a>
+                </li>   
                 <li class="nav-item">
                     <!-- Check if JWT token exists and show the appropriate link -->
                     <a id="editUserLink" class="nav-link" href="{{site.baseurl}}/edituser">Edit User</a>
