--- a/_includes/header.html
+++ b/_includes/header.html
@@ -38,6 +38,7 @@
                         Jobly
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="{{site.baseurl}}/aidanlogin">Login</a></li>
                         <li><a class="dropdown-item" href="{{site.baseurl}}/postjob">Post a Job</a></li>
                         <li><a class="dropdown-item" href="{{site.baseurl}}/jobs">Jobs</a></li>
                         <!-- <li><a class="dropdown-item" href="{{site.baseurl}}/employmentpredictor">Employment Predictor</a></li> -->
